--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Daniel Engel",
   "license": "ISC",
   "dependencies": {
+    "buffer-xor": "^2.0.2",
     "ethereumjs-tx": "^1.3.7",
     "ethers": "^4.0.7",
     "express": "^4.16.4",
