--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Daniel Engel",
   "license": "ISC",
   "dependencies": {
+    "assert-diff": "^2.0.3",
+    "bignumber.js": "^8.0.1",
     "buffer-xor": "^2.0.2",
     "ethereumjs-tx": "^1.3.7",
     "ethers": "^4.0.7",
